--- a/src/main/webapp/app/pages/page-edit.component.html
+++ b/src/main/webapp/app/pages/page-edit.component.html
@@ -2,103 +2,123 @@
 <div class="container d-flex align-items-top">
     <div class="row justify-content-top w-100">
         <div class="col-md-12" [ngSwitch]="isPreview()">
-            <div class="panel panel-primary h-100" id="main-panel">
-                <div class="panel-heading">
-                    <h2>
-                        New Page
-                    </h2>
-                    <div class="row pt-1 pb-1 ">
-                        <div class="input-group col-md-3">
-                            <input placeholder="Name" [(ngModel)]="document.name" class="form-control">
-                        </div>
-                        <div class="input-group col-md-9 pull-right">
-                            <input placeholder="Description" [(ngModel)]="document.description" class="form-control input-md ">
-                        </div>
-                    </div>
-
-                    <!--Add buttons here later-->
-                    <div class="pt-2 ">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Bold">
-                                <i class="fa fa-bold"></i>
-                            </button>
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Italic">
-                                <i class="fa fa-italic"></i>
-                            </button>
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Underline">
-                                <i class="fa fa-underline"></i>
-                            </button>
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Strikethrough">
-                                <i class="fa fa-strikethrough"></i>
-                            </button>
-                        </div>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Align left">
-                                <i class="fa fa-align-left"></i>
-                            </button>
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Align center">
-                                <i class="fa fa-align-center"></i>
-                            </button>
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Align right">
-                                <i class="fa fa-align-right"></i>
-                            </button>
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Align justify">
-                                <i class="fa fa-align-justify"></i>
-                            </button>
-                        </div>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Numbered list">
-                                <i class="fa fa-list-ol"></i>
-                            </button>
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Bulleted list">
-                                <i class="fa fa-list-ul"></i>
-                            </button>
-                        </div>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Link">
-                                <i class="fa fa-link"></i>
-                            </button>
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Unlink">
-                                <i class="fa fa-unlink"></i>
-                            </button>
-                        </div>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Picture">
-                                <i class="fa fa-picture-o"></i>
-                            </button>
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="HTML table">
-                                <i class="fa fa-table"></i>
-                            </button>
-                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Font">
-                                <i class="fa fa-font"></i>
-                            </button>
-                        </div>
-                        <div class="btn-group pull-right">
-                            <button type="button" class="btn btn-primary " data-toggle="button"
-                                    aria-pressed="false"
-                                    autocomplete="off" (click)="togglePreview()">
-                                Preview
-                            </button>
+            <form name="editForm" class="h-100 w-100" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
+                <div class="panel panel-primary h-100" id="main-panel">
+                    <div class="panel-heading">
+                        <h2>
+                            New Page
+                        </h2>
+                        <jhi-alert-error></jhi-alert-error>
+                        <div class="row pt-1 pb-1 ">
+                            <div class="form-group col-md-3">
+                                <div class="input-group ">
+                                    <input placeholder="Name" [(ngModel)]="document.name" class="form-control"
+                                           name="name"
+                                           id="field_name" required minlength="1" maxlength="50">
+                                </div>
+                            </div>
+                            <div class="form-group col-md-9">
+                                <div class="input-group ">
+                                    <input name="description" placeholder="Description"
+                                           [(ngModel)]="document.description"
+                                           class="form-control input-md" maxlength="500">
+                                </div>
+                            </div>
                         </div>
 
+                        <!--Add buttons here later-->
+                        <div class="pt-2 ">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" title="Bold">
+                                    <i class="fa fa-bold"></i>
+                                </button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" title="Italic">
+                                    <i class="fa fa-italic"></i>
+                                </button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" title="Underline">
+                                    <i class="fa fa-underline"></i>
+                                </button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip"
+                                        title="Strikethrough">
+                                    <i class="fa fa-strikethrough"></i>
+                                </button>
+                            </div>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" title="Align left">
+                                    <i class="fa fa-align-left"></i>
+                                </button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip"
+                                        title="Align center">
+                                    <i class="fa fa-align-center"></i>
+                                </button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" title="Align right">
+                                    <i class="fa fa-align-right"></i>
+                                </button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip"
+                                        title="Align justify">
+                                    <i class="fa fa-align-justify"></i>
+                                </button>
+                            </div>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default" data-toggle="tooltip"
+                                        title="Numbered list">
+                                    <i class="fa fa-list-ol"></i>
+                                </button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip"
+                                        title="Bulleted list">
+                                    <i class="fa fa-list-ul"></i>
+                                </button>
+                            </div>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" title="Link">
+                                    <i class="fa fa-link"></i>
+                                </button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" title="Unlink">
+                                    <i class="fa fa-unlink"></i>
+                                </button>
+                            </div>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" title="Picture">
+                                    <i class="fa fa-picture-o"></i>
+                                </button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" title="HTML table">
+                                    <i class="fa fa-table"></i>
+                                </button>
+                                <button type="button" class="btn btn-default" data-toggle="tooltip" title="Font">
+                                    <i class="fa fa-font"></i>
+                                </button>
+                            </div>
+                            <div class="btn-group pull-right">
+                                <button type="button" class="btn btn-primary " data-toggle="button"
+                                        aria-pressed="false"
+                                        autocomplete="off" (click)="togglePreview()">
+                                    Preview
+                                </button>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="panel-body h-75 pt-2" id="markdown">
+                        <textarea name="content" *ngSwitchCase="false" class="form-control h-100"
+                                  name="markdown-editor"
+                                  id="markdown-area" required
+                                  (keyup)="renderMarkdown($event.target.value)"
+                                  [(ngModel)]="document.content"></textarea>
+
+                        <div class="h-100 pt-2 markdown-body" id="preview-panel" [innerHtml]="convertedText"
+                             *ngSwitchCase="true"></div>
+                    </div>
+                    <div class="panel-footer pt-2">
+                        <div class="placeholder">
+                        </div>
+                        <div class="pull-right">
+                            <button type="button" type="submit" class="btn btn-primary"
+                                    [disabled]="editForm.form.invalid || isSaving">Save
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="panel-body h-75 pt-2" id="markdown">
-                    <textarea *ngSwitchCase="false" class="form-control h-100" name="markdown-editor" id="markdown-area"
-                              (keyup)="renderMarkdown($event.target.value)" [(ngModel)]="document.content"></textarea>
-                    <div class="h-100 pt-2 markdown-body" id="preview-panel" [innerHtml]="convertedText"
-                         *ngSwitchCase="true"></div>
-                </div>
-                <div class="panel-footer pt-2">
-                    <div  class="placeholder">
-                    </div>
-                    <div class="pull-right">
-                        <button type="button" class="btn btn-primary" (click)="save()">
-                            Save
-                        </button>
-                    </div>
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
